# SDL2Tests

./: CMakeLists.txt
core/source/: main.cpp
